invisible tooltip div no longer changes cursor if hovered over

--- a/ufc-viz.css
+++ b/ufc-viz.css
@@ -22,4 +22,5 @@
 	left: 0px;
 	top: 0px;
 	background: white;
+	cursor: default;
 }
